Added add-opens back into config